--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ body {
     width: 66px;
     margin-left: -4px;
     position: relative;
-    bottom: 14px;
+    bottom: 0;
 }
 
 .check-button:hover {
