--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ body {
     width: 66px;
     margin-left: -4px;
     position: relative;
-    bottom: 0;
+    bottom: -1px;
 }
 
 .check-button:hover {
